materialized/flux-system/1-manifest/networking.k8s.io_v1-networkpolicy-flux-system-allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: flux-system
    app.kubernetes.io/part-of: flux
    app.kubernetes.io/version: v0.37.0
  name: allow-egress
  namespace: flux-system
spec:
  egress: []
  ingress:
  - from:
    - podSelector: {}
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
